# arborparser

./: .gitignore  LICENSE  README.md  README_cn.md  pyproject.toml
.github/workflows/: py_version_test.yml  python-package.yml
examples/: basic_examples.py
examples/llama_index/: arborparser_nodeparser.py
src/arborparser/: __init__.py  build_strategy.py  chain.py  node.py  pattern.py  tree.py  utils.py
tests/: demo_test.py  file_test.py  multi_chain_test.py
