[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "arborparser"
requires-python = ">=3.9"
dependencies = [
    # 你的依赖项
]
dynamic = ["version", "readme"]

[tool.setuptools]
package-dir = {"" = "src"}

packages = ["arborparser"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.mypy]
exclude = ["build", ".venv"]

warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

ignore_missing_imports = true
explicit_package_bases = true

disallow_untyped_defs = true
disallow_any_generics = true

show_error_codes = true
